anneal/vendor/ui_test/examples_tests/rustc_basic/subdir/aux_proc_macro.rs
//@aux-build:../auxiliary/the_proc_macro.rs

use the_proc_macro::thing;

fn main() {
    thing!(cake);
    //~^ ERROR: cannot find value `cake` in this scope
}
